@@ -1,3 +1,8 @@
+Tue Aug 13 22:12:59 2013  Kenichi Kamiya  <kachick1@gmail.com>
+
+	* random.c (rb_random_ulong_limited): coerce before check negative.
+	  [Fixes GH-379]
+
 Tue Aug 13 21:52:15 2013  Kenichi Kamiya  <kachick1@gmail.com>
 
 	* object.c (Init_Object): undef Module#prepend_features on Class, as
